--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <title>E-Commerce Jurunense</title>
+  <title>E-Commerce</title>
   <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
@@ -16,7 +16,7 @@
   <!-- Navbar -->
     <header id="home">
       <nav class="navbar fixed-top navbar-expand-lg" style="background-color: #313B8C; color: #ffffff">
-        <h1 class="navbar-brand" href="#home">Jurunense E-Commerce</h1>
+        <h1 class="navbar-brand" href="#home">JP E-Commerce</h1>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -76,7 +76,7 @@
     <section>
       <div class="jumbotron jumbotron-fluid mt-3" style="background-color: #313B8C; color: #ffffff">
         <div class="container">
-          <h1 class="display-4">Mega promoções Jurunense</h1>
+          <h1 class="display-4">Mega promoções JP</h1>
           <p class="lead">Mussum Ipsum, cacilds vidis litro abertis. Per aumento de cachacis, eu reclamis. Delegadis
             gente finis, bibendum egestas augue arcu ut est. Admodum accumsan disputationi eu sit. Vide electram
             sadipscing et per. Quem num gosta di mé, boa gentis num é.</p>
