--- a/Carrinho/index.html
+++ b/Carrinho/index.html
@@ -17,7 +17,7 @@
   <!-- Navbar -->
   <header id="home">
     <nav class="navbar fixed-top navbar-expand-lg" style="background-color: #313B8C; color: #ffffff">
-      <h1 class="navbar-brand" href="#home">Jurunense E-Commerce</h1>
+      <h1 class="navbar-brand" href="#home">JP E-Commerce</h1>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
           <div class="card-body">
 
             <h1>Ótima escolha!</h1>
-            <p>Obrigado por comprar na Jurunense E-Commerce! 
+            <p>Obrigado por comprar na JP E-Commerce! 
               Preencha seus dados para efetivar a compra.</p>
 
             <h2>Sua compra</h2>
